[package]
name = "rusterv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", features = [
  "macros",
  "compress-gzip",
], default-features = false }
actix-files = { version = "0.6.5", default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
