[package]
name = "rusterv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["http1", "tokio"], default-features = false }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "net"], default-features = false }
tracing = { version = "0.1.40", features = ["log"], default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["fmt"], default-features = false }
tower-http = { version = "0.5.2", features = [
  "compression-gzip",
  "fs",
], default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
